--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/cockroaches/rusted/issues"
   },
-  "homepage": "https://github.com/cockroaches/rusted#readme"
+  "homepage": "https://github.com/cockroaches/rusted#readme",
+  "dependencies": {
+    "bitstamp": "^0.2.0",
+    "mongoose": "^4.4.2",
+    "restify": "^4.0.3"
+  }
 }
