--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bitstamp": "^0.2.0",
     "mongoose": "^4.4.2",
+    "nodemailer": "^2.1.0",
     "restify": "^4.0.3"
   }
 }
